@@ -7,10 +7,10 @@ fi
 REPO_DIR=`pwd`
 OUTPUT_DIR=`pwd`/Release
 
-BRANCH_NAME=TOSS-v2.4.2
+BRANCH_NAME=TOSS-v2.4.3
 
 # Will get this from git in the future
-VERSION=2.4.2
+VERSION=2.4.3
 
 if ! test -f libevent-2.0.21-stable.tar.gz; then
 	echo "do not need a copy of libevent-2.0.21-stable.tar.gz in $REPO_DIR"
