@@ -193,7 +193,7 @@ start_stores () {
 		eval AGG_CONFIG_$i='$grok'
 	
 		eval extraconfig='$'"AGG_CONFIG_${i}"
-		ARGS_CONFIG="name=$i path=$STORE_PATH $extraconfig"
+		ARGS_CONFIG="name=$i path=$STORE_PATH/$i $extraconfig"
 		echo load name=$i | $DO_CTL
 		echo config $ARGS_CONFIG | $DO_CTL
 		echoq "Configuring <${i}> with $ARGS_CONFIG"
