@@ -17,4 +17,3 @@ STORE_PATH=/projects/ovis/ClusterData/ataco/store_csv
 # Very rarely need to be changed for the sysadmin case.
 #LDMSAGGD_LOCAL_SOCK_DIR=
 #LDMSAGGD_LOCAL_SOCK=
-#LDMSAGGCTL_SOCK_DIR=
