@@ -51,4 +51,3 @@ LDMS_RDMAV_FORK_SAFE=1
 # very odd values to specify, unless running multiple sampler daemons.
 #LDMSD_LOCAL_SOCK=
 #LDMSD_LOCAL_SOCK_DIR=
-#LDMSCTL_SOCK_DIR=
